--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js"></script>
       <!-- CSS -->
-      <link href="./resources/css/style.css" rel="stylesheet" />
+      <link href="assets/css/style.css" rel="stylesheet" />
       <!-- Fonts -->
       <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
 
@@ -24,7 +24,7 @@
       <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
         <div class="container-fluid">
 
-          <a class="navbar-brand" href="index.html"><img id="logo" src="./resources/images/logo-verde-negru.png"></a>
+          <a class="navbar-brand" href="index.html"><img id="logo" src="assets/img/logo-verde-negru.png"></a>
 
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
@@ -59,7 +59,7 @@
 
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="./resources/images/placeholder1.png">
+            <img src="assets/img/placeholder1.png">
             <div class="carousel-caption">
               <h1 class="display-2">AllergyHelp</h1>
               <h3>Previne si trateaza-ti alergiile!</h3>
@@ -70,10 +70,10 @@
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./resources/images/placeholder2.png">
+            <img src="assets/img/placeholder2.png">
           </div>
           <div class="carousel-item">
-            <img src="./resources/images/placeholder3.png">
+            <img src="assets/img/placeholder3.png">
           </div>
         </div>
       </div>
@@ -149,7 +149,7 @@
                <a href="#" class="btn btn-primary">Detalii</a>
           </div>
           <div class="col-lg-6">
-            <img src="./resources/images/placeholder3.png" class="img-fluid">
+            <img src="assets/img/placeholder3.png" class="img-fluid">
           </div>
         </div>
       </div>
@@ -167,7 +167,7 @@
         <div class="row padding">
           <div class="col-md-4">
             <div class="card">
-              <img class="card-img-top" src="./resources/images/placeholder1.png">
+              <img class="card-img-top" src="assets/img/placeholder1.png">
               <div class="card-body">
                 <h4 class="card-title">Alergie 1</h4>
                 <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
@@ -178,7 +178,7 @@
 
           <div class="col-md-4">
             <div class="card">
-              <img class="card-img-top" src="./resources/images/placeholder2.png">
+              <img class="card-img-top" src="assets/img/placeholder2.png">
                 <div class="card-body">
                   <h4 class="card-title">Alergie 2</h4>
                   <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
@@ -189,7 +189,7 @@
 
             <div class="col-md-4">
                 <div class="card">
-                  <img class="card-img-top" src="./resources/images/placeholder3.png">
+                  <img class="card-img-top" src="assets/img/placeholder3.png">
                   <div class="card-body">
                     <h4 class="card-title">Alergie 3</h4>
                     <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
@@ -200,7 +200,7 @@
 
               <div class="col-md-4">
                   <div class="card">
-                    <img class="card-img-top" src="./resources/images/placeholder3.png">
+                    <img class="card-img-top" src="assets/img/placeholder3.png">
                     <div class="card-body">
                       <h4 class="card-title">Alergie 4</h4>
                       <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
@@ -211,7 +211,7 @@
 
                 <div class="col-md-4">
                     <div class="card">
-                      <img class="card-img-top" src="./resources/images/placeholder2.png">
+                      <img class="card-img-top" src="assets/img/placeholder2.png">
                       <div class="card-body">
                         <h4 class="card-title">Alergie 5</h4>
                         <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
@@ -222,7 +222,7 @@
 
                   <div class="col-md-4">
                       <div class="card">
-                        <img class="card-img-top" src="./resources/images/placeholder1.png">
+                        <img class="card-img-top" src="assets/img/placeholder1.png">
                         <div class="card-body">
                           <h4 class="card-title">Alergie 6</h4>
                           <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
@@ -248,7 +248,7 @@
                  <br>
             </div>
             <div class="col-lg-6">
-              <img src="./resources/images/placeholder3.png" class="img-fluid">
+              <img src="assets/img/placeholder3.png" class="img-fluid">
             </div>
           </div>
           <hr class="my-4">
@@ -273,7 +273,7 @@
           <div class="container-fluid padding">
             <div class="row text-center">
               <div class="col-md-12">
-                <img src="./resources/images/logo-alb-alb.png" id="footer-logo">
+                <img src="assets/img/logo-alb-alb.png" id="footer-logo">
               </div>
 
               <div class="col-md-6">
