--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </nav>
 
     <!--- Image Slider -->
-      <div id="slides" class="carousel slide" data-ride="carousel">
+    <!--  <div id="slides" class="carousel slide" data-ride="carousel">
         <ul class="carousel-indicators">
           <li data-target="#slides" data-slide-to="0" class="active"></li>
           <li data-target="#slides" data-slide-to="1"></li>
@@ -76,7 +76,54 @@
             <img src="assets/img/placeholder3.png">
           </div>
         </div>
-      </div>
+      </div> -->
+
+      <div id="slides" class="carousel slide" data-ride="carousel">
+
+        <ol class="carousel-indicators">
+          <li data-target="#slides" data-slide-to="0" class="active"></li>
+          <li data-target="#slides" data-slide-to="1"></li>
+          <li data-target="#slides" data-slide-to="2"></li>
+        </ol>
+
+        <div class="carousel-inner">
+
+          <div class="carousel-item active">
+            <img src="assets/img/placeholder2.png"> 
+            <div class="carousel-caption">
+              <h1 class="display-2">AllergyHelp</h1>
+              <h3>Previne si trateaza-ti alergiile!</h3>
+              <button type="button" class="btn btn-outline-light btn-lg" id="despre">
+                Despre noi
+              </button>
+              <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
+            </div> </div>
+            <div class="carousel-item">
+              <img src="assets/img/placeholder2.png" >
+            </div>
+
+            <div class="carousel-item">
+              <img src="assets/img/placeholder3.png">
+            </div>
+          
+        </div>
+
+
+        <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+        </div>
+
+      
+
+
+
+
     <!--- Jumbotron -->
       <div class="container-fluid">
         <div class="row jumbotron">
