bg's + about page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Navigation -->
       <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-        <div class="container-fluid">
+        
 
           <a class="navbar-brand" href="index.html"><img id="logo" src="assets/img/logo-verde-negru.png"></a>
 
@@ -50,6 +50,7 @@
       </nav>
 
     <!--- Image Slider -->
+   
     <!--  <div id="slides" class="carousel slide" data-ride="carousel">
         <ul class="carousel-indicators">
           <li data-target="#slides" data-slide-to="0" class="active"></li>
@@ -89,21 +90,39 @@
         <div class="carousel-inner">
 
           <div class="carousel-item active">
-            <img src="assets/img/placeholder2.png"> 
+            <!--Background de proba 1 -->
+            <img src="assets/img/dandelion1.jpg"> 
             <div class="carousel-caption">
               <h1 class="display-2">AllergyHelp</h1>
               <h3>Previne si trateaza-ti alergiile!</h3>
-              <button type="button" class="btn btn-outline-light btn-lg" id="despre">
-                Despre noi
+              <button type="button" class="btn btn-outline-light btn-lg" id="despre" ><a href="about.html">
+                Despre noi</a>
               </button>
               <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
             </div> </div>
             <div class="carousel-item">
-              <img src="assets/img/placeholder2.png" >
+              <!--Background de proba 2 -->
+              <img src="assets/img/dandelion2.jpg" >
+              <div class="carousel-caption">
+                <h1 class="display-2">Titlu</h1>
+                <h3>Subtitlu captivant si frumos si relevant</h3>
+                <button type="button" class="btn btn-outline-light btn-lg" id="despre"><a href="about.html">
+                  Despre noi</a>
+                </button>
+                <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
+              </div>
             </div>
 
             <div class="carousel-item">
-              <img src="assets/img/placeholder3.png">
+              <img src="assets/img/placeholder1.png" >
+               <div class="carousel-caption">
+              <h1 class="display-2">Titlu</h1>
+              <h3>Subtitlu captivant si frumos si relevant</h3>
+              <button type="button" class="btn btn-outline-light btn-lg" id="despre">
+                <a href="about.html">
+                  Despre noi</a>
+              </button>
+              <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
             </div>
           
         </div>
