--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <!-- Navigation -->
       <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-        
+        <div class="container-fluid">
 
           <a class="navbar-brand" href="index.html"><img id="logo" src="assets/img/logo-verde-negru.png"></a>
 
@@ -45,7 +45,7 @@
                 <a class="nav-link" href="#">Contact</a>
               </li>
             </ul>
-
+            </div>
         </div>
       </nav>
 
