--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
               </button>
               <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
             </div>
-          
+          </div>
         </div>
 
 
