--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           </div>
         </div>
 
-
+<div class="arrows">
         <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -137,7 +137,7 @@
           <span class="sr-only">Next</span>
         </a>
         </div>
-
+</div>
       
 
 
