--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
           <div class="carousel-item active">
             <!--Background de proba 1 -->
-            <img  class="d-block w-100" src="assets/img/dandelion1.jpg"> 
+            <img src="assets/img/dandelion1.jpg"> 
             <div class="carousel-caption">
               <h1 class="display-2">AllergyHelp</h1>
               <h3>Previne si trateaza-ti alergiile!</h3>
@@ -102,7 +102,7 @@
             </div> </div>
             <div class="carousel-item">
               <!--Background de proba 2 -->
-              <img  class="d-block w-100" src="assets/img/dandelion2.jpg" >
+              <img src="assets/img/dandelion2.jpg" >
               <div class="carousel-caption">
                 <h1 class="display-2">Titlu</h1>
                 <h3>Subtitlu captivant si frumos si relevant</h3>
@@ -114,7 +114,7 @@
             </div>
 
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/img/placeholder1.png" >
+              <img src="assets/img/placeholder1.png" >
                <div class="carousel-caption">
               <h1 class="display-2">Titlu</h1>
               <h3>Subtitlu captivant si frumos si relevant</h3>
@@ -127,7 +127,7 @@
           </div>
         </div>
 
-
+<div class="arrows">
         <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
@@ -137,7 +137,8 @@
           <span class="sr-only">Next</span>
         </a>
         </div>
-
+</div>
+      
 
 
 
