--- a/index.html
+++ b/index.html
@@ -52,65 +52,72 @@
     </div>
   </nav>
 
-  <div id="slides" class="carousel slide" data-ride="carousel">
+  <!-- Carousel -->
+  <div class="c-wrapper">
+    <div id="slides" class="carousel slide" data-ride="carousel">
 
-    <ol class="carousel-indicators">
-      <li data-target="#slides" data-slide-to="0" class="active"></li>
-      <li data-target="#slides" data-slide-to="1"></li>
-      <li data-target="#slides" data-slide-to="2"></li>
-    </ol>
+      <!-- Carousel Indicators -->
+      <ul class="carousel-indicators">
+        <li data-target="#slides" data-slide-to="0" class="active"></li>
+        <li data-target="#slides" data-slide-to="1"></li>
+        <li data-target="#slides" data-slide-to="2"></li>
+      </ul>
 
-    <div class="carousel-inner">
+      <!-- Carousel Slides -->
+      <div class="carousel-inner">
 
-      <div class="carousel-item active">
-        <img src="assets/img/dandelion1.jpg">
-        <div class="carousel-caption">
-          <h1 class="display-2">AllergyHelp</h1>
-          <h3>Previne si trateaza-ti alergiile!</h3>
-          <button type="button" class="btn btn-outline-light btn-lg" id="despre">
-            <a href="about.html">
-              Despre noi</a>
-          </button>
-          <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
+        <div class="carousel-item active">
+          <img src="assets/img/dandelion1.jpg">
+          <div class="carousel-caption">
+            <h1 class="display-2">AllergyHelp</h1>
+            <h3>Previne si trateaza-ti alergiile!</h3>
+            <button type="button" class="btn btn-outline-light btn-lg" id="despre">
+              <a href="about.html">
+                Despre noi</a>
+            </button>
+            <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
+          </div>
         </div>
-      </div>
 
-      <div class="carousel-item">
-        <img src="assets/img/dandelion2.jpg">
-        <div class="carousel-caption">
-          <h1 class="display-2">Titlu</h1>
-          <h3>Subtitlu captivant si frumos si relevant</h3>
-          <button type="button" class="btn btn-outline-light btn-lg" id="despre">
-            <a href="about.html">
-              Despre noi</a>
-          </button>
-          <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
+        <div class="carousel-item">
+          <img src="assets/img/dandelion2.jpg">
+          <div class="carousel-caption">
+            <h1 class="display-2">Titlu</h1>
+            <h3>Subtitlu captivant si frumos si relevant</h3>
+            <button type="button" class="btn btn-outline-light btn-lg" id="despre">
+              <a href="about.html">
+                Despre noi</a>
+            </button>
+            <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
+          </div>
         </div>
-      </div>
 
-      <div class="carousel-item">
-        <img src="assets/img/placeholder1.png">
-        <div class="carousel-caption">
-          <h1 class="display-2">Titlu</h1>
-          <h3>Subtitlu captivant si frumos si relevant</h3>
-          <button type="button" class="btn btn-outline-light btn-lg" id="despre">
-            <a href="about.html">
-              Despre noi</a>
-          </button>
-          <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
+        <div class="carousel-item">
+          <img src="assets/img/placeholder1.png">
+          <div class="carousel-caption">
+            <h1 class="display-2">Titlu</h1>
+            <h3>Subtitlu captivant si frumos si relevant</h3>
+            <button type="button" class="btn btn-outline-light btn-lg" id="despre">
+              <a href="about.html">
+                Despre noi</a>
+            </button>
+            <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
+          </div>
         </div>
-      </div>
-    </div>
 
-    <div class="arrows">
-      <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
+
+        <div class="arrows">
+          <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+      </div>
     </div>
   </div>
 
@@ -309,6 +316,7 @@
       </div>
     </div>
   </div>
+
   <!--- Footer -->
   <footer class="footer-allergyhelp">
     <div class="container-fluid padding">
