--- a/index.html
+++ b/index.html
@@ -22,104 +22,45 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-    <div class="container-fluid">
+  <header id="header">
+    <div class="container">
 
-      <a class="navbar-brand" href="index.html">
-        <img id="logo" src="assets/img/logo-verde-negru.png">
-      </a>
+      <div id="logo">
+        <a href="./index.html">
+          <img src="./assets/img/logo-mic.png">
+        </a>
+      </div>
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item active">
-            <a class="nav-link" href="#">Acasa</a>
+      <nav id="nav-menu-container">
+        <ul class="nav-menu">
+          <li class="menu-active">
+            <a href="#">Acasa</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Servicii</a>
+          <li>
+            <a href="#">Despre noi</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Echipa</a>
+          <li>
+            <a href="#">Servicii</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+          <li>
+            <a href="#">Echipa</a>
           </li>
         </ul>
-      </div>
+      </nav>
     </div>
-  </nav>
+  </header>
 
-  <!-- Carousel -->
-  <div class="c-wrapper">
-    <div id="slides" class="carousel slide" data-ride="carousel">
-
-      <!-- Carousel Indicators -->
-      <ul class="carousel-indicators">
-        <li data-target="#slides" data-slide-to="0" class="active"></li>
-        <li data-target="#slides" data-slide-to="1"></li>
-        <li data-target="#slides" data-slide-to="2"></li>
-      </ul>
-
-      <!-- Carousel Slides -->
-      <div class="carousel-inner">
-
-        <div class="carousel-item active">
-          <img src="assets/img/dandelion1.jpg">
-          <div class="carousel-caption">
-            <h1 class="display-2">AllergyHelp</h1>
-            <h3>Previne si trateaza-ti alergiile!</h3>
-            <button type="button" class="btn btn-outline-light btn-lg" id="despre">
-              <a href="about.html">
-                Despre noi</a>
-            </button>
-            <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
-          </div>
-        </div>
-
-        <div class="carousel-item">
-          <img src="assets/img/dandelion2.jpg">
-          <div class="carousel-caption">
-            <h1 class="display-2">Titlu</h1>
-            <h3>Subtitlu captivant si frumos si relevant</h3>
-            <button type="button" class="btn btn-outline-light btn-lg" id="despre">
-              <a href="about.html">
-                Despre noi</a>
-            </button>
-            <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
-          </div>
-        </div>
-
-        <div class="carousel-item">
-          <img src="assets/img/placeholder1.png">
-          <div class="carousel-caption">
-            <h1 class="display-2">Titlu</h1>
-            <h3>Subtitlu captivant si frumos si relevant</h3>
-            <button type="button" class="btn btn-outline-light btn-lg" id="despre">
-              <a href="about.html">
-                Despre noi</a>
-            </button>
-            <button type="button" class="btn btn-primary btn-lg" id="signup">Inscrie-te acum</button>
-          </div>
-        </div>
-
-
-        <div class="arrows">
-          <a class="carousel-control-prev" href="#slides" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#slides" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
-
-      </div>
+  <!-- Carousel V2 -->
+  <section id="carousel">
+    <div class="carousel-container">
+      <h1>AllergyHelp</h1>
+      <h2>Protejeaza-te impotriva alergiilor</h2>
+      <a href="#" class="btn-get-started">Inscrie-te acum</a>
     </div>
-  </div>
+  </section>
 
   <!--- Jumbotron -->
   <div class="container-fluid">
@@ -138,6 +79,7 @@
       </div>
     </div>
   </div>
+
   <!--- Welcome Section -->
   <div class="container-fluid padding">
     <div class="row welcome text-center">
@@ -152,6 +94,7 @@
       </div>
     </div>
   </div>
+
   <!--- 3 Column Section -->
   <div class="container-fluid padding">
     <div class="row text-center padding">
@@ -177,6 +120,7 @@
     </div>
     <hr class="my-4">
   </div>
+
   <!--- 2 Column Section -->
   <div class="container-fluid padding">
     <div class="row padding">
@@ -196,6 +140,7 @@
     </div>
   </div>
   <hr class="my-4">
+
   <!--- Cards Title -->
   <div class="container-fluid padding">
     <div class="row welcome text-center">
@@ -204,6 +149,7 @@
       </div>
     </div>
   </div>
+
   <!--- Cards Section -->
   <div class="container-fluid padding">
     <div class="row padding">
@@ -275,6 +221,7 @@
 
     </div>
   </div>
+
   <!--- 2 Column Section -->
   <div class="container-fluid padding">
     <div class="row padding">
@@ -349,14 +296,17 @@
       </div>
     </div>
   </footer>
+
   <!-- Scripts -->
+
   <!-- jQuery -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
   <!-- Popper.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
   <!-- Bootstrap JS -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
+  <!-- JavaScript -->
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
