--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@
           <li>
             <a href="#">Echipa</a>
           </li>
+
+          <li>
+            <a href="#" class="btn-get-started">Login</a>
+          </li>
         </ul>
       </nav>
     </div>
