segoe ui & diacritice

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active">
-            <a href="#">Acasa</a>
+            <a href="#">Acasă</a>
           </li>
           <li>
             <a href="#">Despre noi</a>
@@ -61,7 +61,7 @@
   <section id="carousel">
     <div class="carousel-container">
       <h1 class="display-2">AllergyHelp</h1>
-      <h2>Protejeaza-te impotriva alergiilor</h2>
+      <h2>Protejează-te împotriva alergiilor</h2>
       <a href="#" class="btn-get-started">Inscrie-te acum</a>
     </div>
   </section>
@@ -162,7 +162,7 @@
           <img class="card-img-top" src="assets/img/placeholder1.png">
           <div class="card-body">
             <h4 class="card-title">Alergie 1</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -173,7 +173,7 @@
           <img class="card-img-top" src="assets/img/placeholder2.png">
           <div class="card-body">
             <h4 class="card-title">Alergie 2</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -184,7 +184,7 @@
           <img class="card-img-top" src="assets/img/placeholder3.png">
           <div class="card-body">
             <h4 class="card-title">Alergie 3</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -195,7 +195,7 @@
           <img class="card-img-top" src="assets/img/placeholder3.png">
           <div class="card-body">
             <h4 class="card-title">Alergie 4</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -206,7 +206,7 @@
           <img class="card-img-top" src="assets/img/placeholder2.png">
           <div class="card-body">
             <h4 class="card-title">Alergie 5</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -217,7 +217,7 @@
           <img class="card-img-top" src="assets/img/placeholder1.png">
           <div class="card-body">
             <h4 class="card-title">Alergie 6</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -252,7 +252,7 @@
       <div class="container-fluid padding">
         <div class="row text-center padding">
           <div class="col-12">
-            <h1>Contacteaza-ne</h1>
+            <h1>Contactează-ne</h1>
           </div>
           <div class="col-12 social padding">
             <a href="#">
@@ -281,7 +281,7 @@
           <div class="info">
             <div>
               <i class="fas fa-map-marker"></i>
-              <p>Str. Strazilor, Iasi, Romania</p>
+              <p>Str. Străzilor, Iași, România</p>
             </div>
 
             <div>
@@ -299,7 +299,7 @@
 
         <div class="col-lg-5 col-md-8">
           <div class="form">
-            <div id="sendmessage">Va multumim pentru feedback!</div>
+            <div id="sendmessage">Vă mulțumim pentru feedback!</div>
             <div id="errormessage"></div>
             <form action="" method="post" role="form" class="contactForm">
               <div class="form-group">
@@ -344,7 +344,7 @@
         <strong>AllergyHelp</strong>. All Rights Reserved
       </div>
       <div class="credits">
-        Aplicatie realizata de
+        Aplicație realizată de
         <a href="#">Discode Team</a>
       </div>
     </div>
