--- a/about.html
+++ b/about.html
@@ -1,70 +1,291 @@
-<!DOCTYPE html>
+
+
+    <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js"></script>
-    <!-- CSS -->
-    <link href="assets/css/style.css" rel="stylesheet" />
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js"></script>
+  <!-- CSS -->
+  <link href="assets/css/style.css" rel="stylesheet" />
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
 
-    <title>AllergyHelp</title>
+  <title>AllergyHelp</title>
 </head>
 
 <body>
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
-        
+  <!-- Navigation -->
+  <header id="header">
+    <div class="container">
 
-            <a class="navbar-brand" href="index.html">
-                <img id="logo" src="assets/img/logo-verde-negru.png">
-            </a>
+      <div id="logo">
+        <a href="./index.html">
+          <img src="./assets/img/logo-mic.png">
+        </a>
+      </div>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+      <nav id="nav-menu-container">
+        <ul class="nav-menu">
+          <li class="menu-active">
+            <a href="index.html">Acasa</a>
+          </li>
+          <li>
+            <a href="#">Despre noi</a>
+          </li>
+          <li>
+            <a href="#">Servicii</a>
+          </li>
+          <li>
+            <a href="#">Contact</a>
+          </li>
+          <li>
+            <a href="#">Echipa</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
 
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Acasa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Servicii</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Echipa</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
-                </ul>
+ 
 
-            </div>
-    </nav>
+  
 
-<div class="container-fluid">
+  <!--- Welcome Section -->
+  <div class="container-fluid padding">
+    <div class="row welcome text-center">
+      <div class="col-12">
+        <h1 class="display-4">Text frumos</h1>
+      </div>
+      <hr>
+      <div class="col-12">
+        <p class="lead">Bacon ipsum dolor amet meatball boudin ground round strip steak tri-tip rump bresaola meatloaf meatball boudin ground
+          round strip steak tri-tip rump bresaola meatloaf turkey doner shank.
+        </p>
+      </div>
+    </div>
+  </div>
 
-            <img src="assets/img/placeholder3.png">
+  <!--- 3 Column Section -->
+  <div class="container-fluid padding">
+    <div class="row text-center padding">
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <i class="fas fa-allergies"></i>
+        <h3>Alergie</h3>
+        <p>Bacon ipsum dolor amet meatball</p>
+      </div>
+
+      <div class="col-xs-12 col-sm-6 col-md-4">
+        <i class="fas fa-user-md"></i>
+        <h3>Tratamente</h3>
+        <p>Bacon ipsum dolor amet meatball</p>
+      </div>
 
 
+      <div class="col-sm-12 col-md-4">
+        <i class="fas fa-heart"></i>
+        <h3>Care
+          <3</h3>
+            <p>Bacon ipsum dolor amet meatball</p>
+      </div>
+    </div>
+    <hr class="my-4">
+  </div>
 
+  <!--- 2 Column Section -->
+  <div class="container-fluid padding">
+    <div class="row padding">
+      <div class="col-md-12 col-lg-6">
+        <h2>Text mare</h2>
+        <p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank
+          spare ribs strip steak turkey.</p>
+
+        <p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa
+          t-bone chicken shankle.</p>
+        <br>
+        <a href="#" class="btn btn-primary">Detalii</a>
+      </div>
+      <div class="col-lg-6">
+        <img src="assets/img/placeholder3.png" class="img-fluid">
+      </div>
+    </div>
+  </div>
+  <hr class="my-4">
+
+  <!--- Cards Title -->
+  <div class="container-fluid padding">
+    <div class="row welcome text-center">
+      <div class="col-12">
+        <h1 class="display-4">Diverse Alergii</h1>
+      </div>
+    </div>
+  </div>
+
+  <!--- Cards Section -->
+  <div class="container-fluid padding">
+    <div class="row padding">
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="assets/img/placeholder1.png">
+          <div class="card-body">
+            <h4 class="card-title">Alergie 1</h4>
+            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="assets/img/placeholder2.png">
+          <div class="card-body">
+            <h4 class="card-title">Alergie 2</h4>
+            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="assets/img/placeholder3.png">
+          <div class="card-body">
+            <h4 class="card-title">Alergie 3</h4>
+            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="assets/img/placeholder3.png">
+          <div class="card-body">
+            <h4 class="card-title">Alergie 4</h4>
+            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="assets/img/placeholder2.png">
+          <div class="card-body">
+            <h4 class="card-title">Alergie 5</h4>
+            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="assets/img/placeholder1.png">
+          <div class="card-body">
+            <h4 class="card-title">Alergie 6</h4>
+            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
+            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
+          </div>
+        </div>
+      </div>
 
     </div>
-    </div>    
+  </div>
+
+  <!--- 2 Column Section -->
+  <div class="container-fluid padding">
+    <div class="row padding">
+      <div class="col-md-12 col-lg-6">
+        <h2>Text mare</h2>
+        <p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank
+          spare ribs strip steak turkey.</p>
+
+        <p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa
+          t-bone chicken shankle.</p>
+        <br>
+      </div>
+      <div class="col-lg-6">
+        <img src="assets/img/placeholder3.png" class="img-fluid">
+      </div>
     </div>
+    <hr class="my-4">
+  </div>
 
+  <!--- Social Media -->
+  <div class="container-fluid padding">
+    <div class="row text-center padding">
+      <div class="col-12">
+        <h2>Connect</h2>
+      </div>
+      <div class="col-12 social padding">
+        <a href="#">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-google-plus-g"></i>
+        </a>
+        <a href="#">
+          <i class="fab fa-youtube"></i>
+        </a>
+      </div>
+    </div>
+  </div>
 
+  <!--- Footer -->
+  <footer class="footer-allergyhelp">
+    <div class="container-fluid padding">
+      <div class="row text-center">
+        <div class="col-md-12">
+          <img src="assets/img/logo-alb-alb.png" id="footer-logo">
+        </div>
 
+        <div class="col-md-6">
+          <hr class="light">
+          <p>+40712345678</p>
+          <p>email@email.com</p>
+          <p>Str. Strazilor, Iasi</p>
+          <p>Iasi, Romania</p>
+        </div>
 
-    </body>
-    </html>
+        <div class="col-md-6">
+
+          <hr class="light">
+          <p>+40712345678</p>
+          <p>email@email.com</p>
+          <p>Str. Strazilor, Iasi</p>
+          <p>Iasi, Romania</p>
+        </div>
+
+        <div class="col-12">
+          <hr class="light">
+          <h5>&copy; AllergyHelp 2018</h5>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Scripts -->
+
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+  <!-- Popper.js -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+  <!-- Bootstrap JS -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+  <!-- JavaScript -->
+  <script src="./assets/js/main.js"></script>
+</body>
+
+</html>
