--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#">Acasa</a>
           </li>
           <li>
-            <a href="#">Despre noi</a>
+            <a href="about.html">Despre noi</a>
           </li>
           <li>
             <a href="#">Servicii</a>
