nav mobile button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         </a>
       </div>
 
+
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active">
@@ -54,6 +55,9 @@
           </li>
         </ul>
       </nav>
+      <button class="btn-primary navbar-toggle float-right sandwich" data-toggle="collapse" data-target="#nav-menu-container">
+        <i class="fas fa-bars"></i>
+      </button>
     </div>
   </header>
 
