--- a/about.html
+++ b/about.html
@@ -1,6 +1,4 @@
-
-
-    <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -15,6 +13,7 @@
   <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js"></script>
   <!-- CSS -->
   <link href="assets/css/style.css" rel="stylesheet" />
+  <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet" />
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700,900" rel="stylesheet">
 
@@ -24,7 +23,7 @@
 <body>
 
   <!-- Navigation -->
-  <header id="header">
+  <header id="header" class="aboutHeader">
     <div class="container">
 
       <div id="logo">
@@ -35,10 +34,10 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active">
+          <li>
             <a href="index.html">Acasa</a>
           </li>
-          <li>
+          <li class="menu-active">
             <a href="#">Despre noi</a>
           </li>
           <li>
@@ -47,165 +46,16 @@
           <li>
             <a href="#">Contact</a>
           </li>
-          <li>
-            <a href="#">Echipa</a>
-          </li>
         </ul>
       </nav>
     </div>
   </header>
 
- 
-
-  
-
-  <!--- Welcome Section -->
-  <div class="container-fluid padding">
-    <div class="row welcome text-center">
-      <div class="col-12">
-        <h1 class="display-4">Text frumos</h1>
-      </div>
-      <hr>
-      <div class="col-12">
-        <p class="lead">Bacon ipsum dolor amet meatball boudin ground round strip steak tri-tip rump bresaola meatloaf meatball boudin ground
-          round strip steak tri-tip rump bresaola meatloaf turkey doner shank.
-        </p>
-      </div>
-    </div>
-  </div>
-
-  <!--- 3 Column Section -->
-  <div class="container-fluid padding">
-    <div class="row text-center padding">
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <i class="fas fa-allergies"></i>
-        <h3>Alergie</h3>
-        <p>Bacon ipsum dolor amet meatball</p>
-      </div>
-
-      <div class="col-xs-12 col-sm-6 col-md-4">
-        <i class="fas fa-user-md"></i>
-        <h3>Tratamente</h3>
-        <p>Bacon ipsum dolor amet meatball</p>
-      </div>
-
-
-      <div class="col-sm-12 col-md-4">
-        <i class="fas fa-heart"></i>
-        <h3>Care
-          <3</h3>
-            <p>Bacon ipsum dolor amet meatball</p>
-      </div>
-    </div>
-    <hr class="my-4">
-  </div>
-
   <!--- 2 Column Section -->
-  <div class="container-fluid padding">
+  <div id="margin" class="container-fluid padding">
     <div class="row padding">
       <div class="col-md-12 col-lg-6">
-        <h2>Text mare</h2>
-        <p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank
-          spare ribs strip steak turkey.</p>
-
-        <p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa
-          t-bone chicken shankle.</p>
-        <br>
-        <a href="#" class="btn btn-primary">Detalii</a>
-      </div>
-      <div class="col-lg-6">
-        <img src="assets/img/placeholder3.png" class="img-fluid">
-      </div>
-    </div>
-  </div>
-  <hr class="my-4">
-
-  <!--- Cards Title -->
-  <div class="container-fluid padding">
-    <div class="row welcome text-center">
-      <div class="col-12">
-        <h1 class="display-4">Diverse Alergii</h1>
-      </div>
-    </div>
-  </div>
-
-  <!--- Cards Section -->
-  <div class="container-fluid padding">
-    <div class="row padding">
-      <div class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder1.png">
-          <div class="card-body">
-            <h4 class="card-title">Alergie 1</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
-            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder2.png">
-          <div class="card-body">
-            <h4 class="card-title">Alergie 2</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
-            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder3.png">
-          <div class="card-body">
-            <h4 class="card-title">Alergie 3</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
-            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder3.png">
-          <div class="card-body">
-            <h4 class="card-title">Alergie 4</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
-            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder2.png">
-          <div class="card-body">
-            <h4 class="card-title">Alergie 5</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
-            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder1.png">
-          <div class="card-body">
-            <h4 class="card-title">Alergie 6</h4>
-            <p class="card-text">Detalii alergie foarte periculoasa si dureroasa</p>
-            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
-
-  <!--- 2 Column Section -->
-  <div class="container-fluid padding">
-    <div class="row padding">
-      <div class="col-md-12 col-lg-6">
-        <h2>Text mare</h2>
+        <h2>Cine suntem?</h2>
         <p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank
           spare ribs strip steak turkey.</p>
 
@@ -220,28 +70,79 @@
     <hr class="my-4">
   </div>
 
-  <!--- Social Media -->
-  <div class="container-fluid padding">
-    <div class="row text-center padding">
-      <div class="col-12">
-        <h2>Connect</h2>
+   <div class="container-fluid padding">
+    <div class="row padding">
+      <div class="col-md-12 col-lg-6">
+        <h2>Ce vrem sa facem?</h2>
+        <p>Corned beef frankfurter tenderloin beef ribs beef. Cow buffalo alcatra jowl drumstick biltong meatball bresaola shank
+          spare ribs strip steak turkey.</p>
+
+        <p>Meatloaf salami filet mignon brisket pork belly flank kielbasa. Shoulder chuck hamburger, cupim cow bacon kielbasa
+          t-bone chicken shankle.</p>
+        <br>
       </div>
-      <div class="col-12 social padding">
-        <a href="#">
-          <i class="fab fa-facebook"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-twitter"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-google-plus-g"></i>
-        </a>
-        <a href="#">
-          <i class="fab fa-youtube"></i>
-        </a>
+      <div class="col-lg-6">
+        <img src="assets/img/placeholder3.png" class="img-fluid">
       </div>
     </div>
+    <hr class="my-4">
   </div>
+
+  <!--Team-->
+  <section id="team">
+      <div class="container wow fadeInUp">
+        <div class="section-header">
+          <h3 class="section-title">Echipa</h3>
+        </div>
+        <div class="row">
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="./assets/img/avatars/2.jpg" alt=""></div>
+              <h4>Iacob Octavian</h4>
+              <div class="aboutsocial">
+                <a target="_blank" class="icon" href="https://www.facebook.com/octavzz"><i class="ion-social-facebook"></i></a>
+                <a target="_blank" class="icon" href="https://www.instagram.com/octavzz/?hl=en"><i class="ion-social-instagram"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="./assets/img/avatars/4.jpg" alt=""></div>
+              <h4>Negru Parascheva</h4>
+              <div class="aboutsocial">
+                <a target="_blank" class="icon" href="https://www.facebook.com/parascheva.negru"><i class="ion-social-facebook"></i></a>
+                <a target="_blank" class="icon" href="https://www.instagram.com/paraschevanegru/"><i class="ion-social-instagram"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="./assets/img/avatars/3.jpg" alt=""></div>
+              <h4>Scurtu Claudiu</h4>
+              <div class="aboutsocial">
+                <a   target="_blank" class="icon" href="https://www.facebook.com/claudiu.scurtu.3"><i class="ion-social-facebook"></i></a>
+                <a target="_blank" class="icon" href="https://www.instagram.com/claudiuscurtu/?hl=en"><i class="ion-social-instagram"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6">
+            <div class="member">
+              <div class="pic"><img src="./assets/img/avatars/1.jpg" alt=""></div>
+              <h4>Toderica Alexandru</h4>
+              <div class="aboutsocial">
+                <a target="_blank" class="icon" href="https://www.facebook.com/alexandru.toderica"><i class="ion-social-facebook"></i></a>
+                <a target="_blank" class="icon" href="https://www.instagram.com/toderrrica/"><i class="ion-social-instagram"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section><!--team==>
+
 
   <!--- Footer -->
   <footer class="footer-allergyhelp">
