--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li>
-            <a href="index.html">Acasa</a>
+            <a href="index.html">Acasă</a>
           </li>
           <li class="menu-active">
             <a href="#">Despre noi</a>
@@ -145,34 +145,19 @@
 
 
   <!--- Footer -->
-  <footer class="footer-allergyhelp">
-    <div class="container-fluid padding">
-      <div class="row text-center">
-        <div class="col-md-12">
-          <img src="assets/img/logo-alb-alb.png" id="footer-logo">
-        </div>
+  <footer id="footer">
+    <div class="footer-top">
+      <div class="container"></div>
+    </div>
 
-        <div class="col-md-6">
-          <hr class="light">
-          <p>+40712345678</p>
-          <p>email@email.com</p>
-          <p>Str. Strazilor, Iasi</p>
-          <p>Iasi, Romania</p>
-        </div>
-
-        <div class="col-md-6">
-
-          <hr class="light">
-          <p>+40712345678</p>
-          <p>email@email.com</p>
-          <p>Str. Strazilor, Iasi</p>
-          <p>Iasi, Romania</p>
-        </div>
-
-        <div class="col-12">
-          <hr class="light">
-          <h5>&copy; AllergyHelp 2018</h5>
-        </div>
+    <div class="container">
+      <div class="copyright">
+        &copy; Copyright
+        <strong>AllergyHelp</strong>. All Rights Reserved
+      </div>
+      <div class="credits">
+        Aplicație realizată de
+        <a href="#">Discode Team</a>
       </div>
     </div>
   </footer>
