adaugare poze, text

--- a/about.html
+++ b/about.html
@@ -46,7 +46,14 @@
           <li>
             <a href="#">Contact</a>
           </li>
+           <li>
+            <a href="#" class="btn-get-started">Login</a>
+          </li>
         </ul>
+      </nav>
+      <button class="btn-primary navbar-toggle float-right sandwich" data-toggle="collapse" data-target="#nav-menu-container">
+        <i class="fas fa-bars"></i>
+      </button>
       </nav>
     </div>
   </header>
