--- a/index.html
+++ b/index.html
@@ -159,10 +159,10 @@
     <div class="row padding">
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder1.png">
+          <img class="card-img-top" src="assets/img/rsz_alergia-la-polen.jpg">
           <div class="card-body">
-            <h4 class="card-title">Alergie 1</h4>
-            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
+            <h4 class="card-title">Rinita Alergică</h4>
+            <p class="card-text">Cel puțin 1 din 10 persoane la nivel mondial suferă de rinită alergică, iar incidența acestei afecțiuni este în creștere, din cauza creșterii expunerii la poluanții atmosferici și utilizării crescute de antibiotice pentru tratarea infecțiilor respiratorii în copilarie.</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
         </div>
@@ -170,9 +170,20 @@
 
       <div class="col-md-4">
         <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder2.png">
+          <img class="card-img-top" src="assets/img/astm1.jpg">
           <div class="card-body">
-            <h4 class="card-title">Alergie 2</h4>
+            <h4 class="card-title">Astmul Bronșic</h4>
+            <p class="card-text">Peste 300 de milioane de oameni din întreaga lume sufera de astm bronșic, prevalența acestei boli este în creștere. În România, prevalența astmului este de 4-6%, fiind afectate aproximativ un milion de persoane, din care se estimeaza ca 60% sunt la copii și tineri.</p>
+            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card">
+          <img class="card-img-top" src="assets/img/placeholder3.png">
+          <div class="card-body">
+            <h4 class="card-title">Dermatita Atopică</h4>
             <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
@@ -183,18 +194,7 @@
         <div class="card">
           <img class="card-img-top" src="assets/img/placeholder3.png">
           <div class="card-body">
-            <h4 class="card-title">Alergie 3</h4>
-            <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
-            <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card">
-          <img class="card-img-top" src="assets/img/placeholder3.png">
-          <div class="card-body">
-            <h4 class="card-title">Alergie 4</h4>
+            <h4 class="card-title">Dermatita de contatct</h4>
             <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
@@ -205,7 +205,7 @@
         <div class="card">
           <img class="card-img-top" src="assets/img/placeholder2.png">
           <div class="card-body">
-            <h4 class="card-title">Alergie 5</h4>
+            <h4 class="card-title">Alergia Alimentară</h4>
             <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
@@ -216,7 +216,7 @@
         <div class="card">
           <img class="card-img-top" src="assets/img/placeholder1.png">
           <div class="card-body">
-            <h4 class="card-title">Alergie 6</h4>
+            <h4 class="card-title">Intoleranță Alimetară</h4>
             <p class="card-text">Detalii alergie foarte periculoasă și dureroasă</p>
             <a href="#" class="btn btn-outline-secondary">Vezi Detalii</a>
           </div>
